--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet" />
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/swiper-bundle.css" />
-    <link rel="stylesheet" href="../css/splitting.css" />
-    <link rel="stylesheet" href="../css/aos.css" />
-    <link rel="stylesheet" href="../css/svg.css" />
-    <link rel="stylesheet" href="../css/layout.css" />
-    <link rel="stylesheet" href="../css/main.css" />
-    <script src="../js/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/swiper-bundle.css" />
+    <link rel="stylesheet" href="./css/splitting.css" />
+    <link rel="stylesheet" href="./css/aos.css" />
+    <link rel="stylesheet" href="./css/svg.css" />
+    <link rel="stylesheet" href="./css/layout.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/08ebc00fc6.js" crossorigin="anonymous"></script>
-    <script src="../js/jquery-3.6.1.min.js"></script>
-    <script src="../js/gsap/gsap.min.js"></script>
-    <script src="../js/gsap/ScrollToPlugin.min.js"></script>
-    <script src="../js/splitting.min.js"></script>
-    <script src="../js/aos.js"></script>
+    <script src="./js/jquery-3.6.1.min.js"></script>
+    <script src="./js/gsap/gsap.min.js"></script>
+    <script src="./js/gsap/ScrollToPlugin.min.js"></script>
+    <script src="./js/splitting.min.js"></script>
+    <script src="./js/aos.js"></script>
   </head>
   <body>
     <header id="header">
       <div class="container">
         <h1 id="logo">
           <a href="">
-            <img src="../images/layout/logo_w.svg" alt="" id="logo-white" />
-            <img src="../images/layout/logo.svg" alt="" id="logo-color" />
+            <img src="./images/layout/logo_w.svg" alt="" id="logo-white" />
+            <img src="./images/layout/logo.svg" alt="" id="logo-color" />
           </a>
         </h1>
         <nav id="gnb">
@@ -223,7 +223,7 @@
               <li class="swiper-slide">
                 <a href="">
                   <div class="img-box">
-                    <img src="../images/layout/logo.svg" alt="" />
+                    <img src="./images/layout/logo.svg" alt="" />
                   </div>
                   <div class="txt-box">
                     <h3>[기사링크] 화학과 천진우 교수 17분내 코로나19 진단 기술 개발</h3>
@@ -237,7 +237,7 @@
               <li class="swiper-slide">
                 <a href="">
                   <div class="img-box">
-                    <img src="../images/layout/logo.svg" alt="" />
+                    <img src="./images/layout/logo.svg" alt="" />
                   </div>
                   <div class="txt-box">
                     <h3>[기사링크] 화학과 천진우 교수 17분내 코로나19 진단 기술 개발</h3>
@@ -251,7 +251,7 @@
               <li class="swiper-slide">
                 <a href="">
                   <div class="img-box">
-                    <img src="../images/layout/logo.svg" alt="" />
+                    <img src="./images/layout/logo.svg" alt="" />
                   </div>
                   <div class="txt-box">
                     <h3>[기사링크] 화학과 천진우 교수 17분내 코로나19 진단 기술 개발</h3>
@@ -265,7 +265,7 @@
               <li class="swiper-slide">
                 <a href="">
                   <div class="img-box">
-                    <img src="../images/layout/logo.svg" alt="" />
+                    <img src="./images/layout/logo.svg" alt="" />
                   </div>
                   <div class="txt-box">
                     <h3>[기사링크] 화학과 천진우 교수 17분내 코로나19 진단 기술 개발</h3>
@@ -279,7 +279,7 @@
               <li class="swiper-slide">
                 <a href="">
                   <div class="img-box">
-                    <img src="../images/layout/logo.svg" alt="" />
+                    <img src="./images/layout/logo.svg" alt="" />
                   </div>
                   <div class="txt-box">
                     <h3>[기사링크] 화학과 천진우 교수 17분내 코로나19 진단 기술 개발</h3>
@@ -293,7 +293,7 @@
               <li class="swiper-slide">
                 <a href="">
                   <div class="img-box">
-                    <img src="../images/layout/logo.svg" alt="" />
+                    <img src="./images/layout/logo.svg" alt="" />
                   </div>
                   <div class="txt-box">
                     <h3>[기사링크] 화학과 천진우 교수 17분내 코로나19 진단 기술 개발</h3>
@@ -472,37 +472,37 @@
             <ul>
               <li>
                 <a href="">
-                  <img src="../images/main/math.png" alt="" />
+                  <img src="./images/main/math.png" alt="" />
                   <span>수학과</span>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="../images/main/math.png" alt="" />
+                  <img src="./images/main/math.png" alt="" />
                   <span>수학과</span>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="../images/main/math.png" alt="" />
+                  <img src="./images/main/math.png" alt="" />
                   <span>수학과</span>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="../images/main/math.png" alt="" />
+                  <img src="./images/main/math.png" alt="" />
                   <span>수학과</span>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="../images/main/math.png" alt="" />
+                  <img src="./images/main/math.png" alt="" />
                   <span>수학과</span>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="../images/main/math.png" alt="" />
+                  <img src="./images/main/math.png" alt="" />
                   <span>수학과</span>
                 </a>
               </li>
@@ -516,37 +516,37 @@
             <ul>
               <li>
                 <a href="">
-                  <img src="../images/main/math.png" alt="" />
+                  <img src="./images/main/math.png" alt="" />
                   <span>수학과</span>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="../images/main/math.png" alt="" />
+                  <img src="./images/main/math.png" alt="" />
                   <span>수학과</span>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="../images/main/math.png" alt="" />
+                  <img src="./images/main/math.png" alt="" />
                   <span>수학과</span>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="../images/main/math.png" alt="" />
+                  <img src="./images/main/math.png" alt="" />
                   <span>수학과</span>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="../images/main/math.png" alt="" />
+                  <img src="./images/main/math.png" alt="" />
                   <span>수학과</span>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="../images/main/math.png" alt="" />
+                  <img src="./images/main/math.png" alt="" />
                   <span>수학과</span>
                 </a>
               </li>
@@ -585,16 +585,16 @@
           <div class="mask">
             <ul class="swiper-wrapper">
               <li class="swiper-slide">
-                <img src="../images/main/main_community_img1.png" alt="" />
+                <img src="./images/main/main_community_img1.png" alt="" />
               </li>
               <li class="swiper-slide">
-                <img src="../images/main/main_community_img2.png" alt="" />
+                <img src="./images/main/main_community_img2.png" alt="" />
               </li>
               <li class="swiper-slide">
-                <img src="../images/main/main_community_img3.png" alt="" />
+                <img src="./images/main/main_community_img3.png" alt="" />
               </li>
               <li class="swiper-slide">
-                <img src="../images/main/main_community_img4.png" alt="" />
+                <img src="./images/main/main_community_img4.png" alt="" />
               </li>
             </ul>
           </div>
@@ -622,7 +622,7 @@
       <div class="container">
         <div class="addr-box">
           <div class="logo">
-            <img src="../images/layout/logo_w.svg" alt="" />
+            <img src="./images/layout/logo_w.svg" alt="" />
           </div>
           <address>
             <p>서울특별시 서대문구 연세로 50 연세대학교 이과대학 (03722)</p>
